k8s/backend-deployment.staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: short-backend
  labels:
    app: short
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: short
      tier: backend
  template:
    metadata:
      labels:
        app: short
        tier: backend
    spec:
      containers:
        - name: short-backend
          image: byliuyang/short-backend-staging
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 8080
          args:
            - ./scripts/wait-for-it
            - -s
            - -t
            - "0"
            - localhost:5432
            - --
            - ./build/app
            - start
            - --migration
            - app/adapter/migration
        - name: db
          image: postgres:12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: short-db-data
      volumes:
        - name: short-db-data
          persistentVolumeClaim:
            claimName: short-db-data
      restartPolicy: Always
