k8s/frontend-deployment.staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: short-frontend
  labels:
    app: short
    tier: frontend
spec:
  replicas: 2
  template:
    metadata:
      name: short-frontend
      labels:
        app: short
        tier: frontend
    spec:
      containers:
      - name: short-frontend
        image: byliuyang/short-frontend-staging
        imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: short
      tier: frontend
