k8s/frontend-pod.staging.yaml
apiVersion: v1
kind: Pod
metadata:
  name: short-frontend
  namespace: staging
  labels:
    app: short
    tier: frontend
spec:
  containers:
    - name: short-frontend
      image: byliuyang/short-frontend-staging
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
