k8s/frontend-service.staging.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: short-frontend
spec:
  selector:
    app: short
    tier: frontend
  ports:
    - port: 80
